add complete partners api
